# slackFS

./: .gitignore  PsuedoCode.md  README.md  ToDo.md  christian_update.docx  file_hiding_helper.c  map.json  pyproject.toml  requirements.txt  runTests.py  slackFS.pyz  test.c  tests.py
Readme/: ErasureCodeResearch.md
bashFiles/: calc_slack.bash  calc_slack_usr.bash  test.bash
bmap/: bmap  bmap-invoke.sgml  bmap-read.txt  bmap.tex  config.h  dev_builder  dev_entries.c  out.txt  slacker  slacker-invoke.sgml
ecoding/: a.out  test.c
mapFiles/: mapFile_fat16FS_full200MB.txt  mapFile_first10MB.txt  mapFile_first1KB.txt  mapFile_first50MB.txt
plots/: Hiding BACKEND_NULL CHKSUM_CRC32 vs JERASURE_RS_CAUCHY CHKSUM_CRC32.eps  Hiding BACKEND_NULL CHKSUM_CRC32 vs LIBERASURECODE_RS_VAND CHKSUM_NONE.eps  Hiding BACKEND_NULL CHKSUM_MD5 vs BACKEND_NULL CHKSUM_NONE vs BACKEND_NULL CHKSUM_CRC32.eps  Hiding BACKEND_NULL CHKSUM_MD5 vs BACKEND_NULL CHKSUM_NONE.eps  Hiding BACKEND_NULL CHKSUM_NONE vs JERASURE_RS_CAUCHY CHKSUM_NONE.eps  Hiding BACKEND_NULL CHKSUM_NONE vs JERASURE_RS_VAND CHKSUM_CRC32.eps  Hiding BACKEND_NULL CHKSUM_NONE vs LIBERASURECODE_RS_VAND CHKSUM_MD5.eps  Hiding BACKEND_NULL CHKSUM_NONE vs LIBERASURECODE_RS_VAND CHKSUM_NONE.eps  Hiding JERASURE_RS_CAUCHY CHKSUM_CRC32 vs JERASURE_RS_CAUCHY CHKSUM_NONE.eps  Hiding JERASURE_RS_CAUCHY CHKSUM_MD5 vs LIBERASURECODE_RS_VAND CHKSUM_NONE.eps  Hiding JERASURE_RS_CAUCHY CHKSUM_NONE vs JERASURE_RS_VAND CHKSUM_CRC32.eps  Hiding JERASURE_RS_CAUCHY CHKSUM_NONE vs JERASURE_RS_VAND CHKSUM_NONE.eps  data.csv  overall_hideTimes.eps  (+21 more)
(+1080 files in other folders)
