[tool.poetry]
name = "slackfs"
version = "0.1.0"
description = ""
authors = ["blackgazzelle <blackgazzelle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
black = ">=23.9.1"
isort = ">=5.12.0"
mypy = ">=1.5.1"
flake8 = ">=6.1.0"
pyeclib = "^1.6.1"
setuptools = "^68.2.2"
pandas = "^2.1.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
