[tool.poetry]
name = "slackfs"
version = "0.1.0"
description = ""
authors = ["blackgazzelle <blackgazzelle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
flake8 = "^7.1.1"
pyeclib = "^1.6.1"
setuptools = "^72.1.0"
pandas = "^2.1.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
